# IumanovVM

./: Abongus2.cpp  Nimebuchiy  contest2.ipynb  memchiki.ipynb  pipipi.cpp
AlgorythmsHW/: Lesson_2.ipynb
AlgorythmsHW/HW_1/: Task1.py  Task4.py
CalcNikit/calculator/: CMakeLists.txt  calculator.cpp  functions.cpp  token.h  variable.cpp  variable.h
Calculator/Stroustrupp govnarb/: Token.cpp  Token.h  TokenStream.cpp  TokenStream.h  calculator.cpp  calculator01.cpp  functions.cpp  grammar.cpp  variable.cpp  variable.h  Ве_крест_крест.h
ClassVector2d/: Vector2d.cpp  Vector2d.h
Nim/: nimfuck.cpp
asm_seminars/: move.c  mstore.cpp  mstore_c.s  task3.s
musorka/: README.md  main.c  memchiki.ipynb  ogo.txt
musorka/asm_seminars/: main.cpp  move.s  mstore.dump  mstore_cpp.s  prog.dump  task3.c  task4.c
musorka/projects/: CMakeLists.txt  abibas.cpp
musorka/projects/07/CMakeProject1/: CMakeLists.txt  Calculate.h  CanRoman.cpp  RomanNumbers.h  Token.cpp  Token.h  Token_stream.cpp  Variable.cpp  Variables.cpp  Variables.h
musorka/raspal/: 0211.c  0911.c  Pupundel.c  pipipi.cpp
musorka/БД/: ER.drawio  UseCase.drawio
projects/: .gitignore  CMakeLists.txt
projects/07/calculator/: CMakeLists.txt  calculator.cpp  functions.cpp  functions.h  grammar.cpp  grammar.h  token.h  variable.cpp  variable.h
projects/07/calculator/OgoCalc/textfiles/: output.txt
projects/07/calculator/govnososi/: pozorstraus.sln  pozorstraus.vcxproj  pozorstraus.vcxproj.filters
projects/07/calculator/govnososi/x64/Debug/: vc143.idb
projects/07/calculator/govnososi/x64/Release/pozorstraus.tlog/: CL.write.1.tlog  pozorstraus.lastbuildstate
projects/07/calculator/параша/1 more calc/Calculator/Calculator/: calculator.cpp  variable.cpp
projects/07/calculator/параша/1 more calc/Calculator/build-Calculator-Desktop-Debug/Debug_Desktop_1a2da7bbf9f234ab/: Debug_Desktop_1a2da7bbf9f234ab.bg
projects/Titanfall-3/: CMakeLists.txt  draw.cpp  level_gen.cpp  level_gen.h  main.cpp  settings.h
projects/ch14/: logic.cpp  logic.h  main.cpp
projects/least_squares/: CMakeLists.txt  main.cpp
raspal/: Abongus2.cpp
raspal/26102024/: 261020241.c  261020242.c
semestr4/Cpp/homework/: .gitignore  CMakeLists.txt
semestr4/Cpp/homework/1/: Group.cpp  Group.h  Observer.cpp  Observer.h  User.cpp  User.h  task_1.cpp
semestr4/Cpp/homework/2/: main.cpp
semestr4/Cpp/homework/3/: TypeMap.hpp  task_3.cpp
semestr4/Cpp/homework/4/: counter.hpp  lcs.hpp  task_4.cpp
semestr4/Cpp/homework/5/: Log.cpp  Log.h  task_5.cpp
semestr4/Cpp/homework/6/: task_6.cpp
semestr4/Cpp/homework/7/: task_7.cpp
semestr4/Cpp/homework/8/: task_8.cpp
semestr4/Cpp/seminar1/: CMakeLists.txt  main.cpp
shit_projects/calculator/: grammar.cpp  grammar.h  token.h  variable.h
shit_projects/least_squares/: data.txt
shit_projects/megacalcworking/: functions.cpp  functions.h  std_lib_facilities.h  (+1 more)
wtf/: main.c  swap.c
БД/: Problems2YUMANOV.xlsx  Siskoliz.md  Юманов Василий дз 1.xlsx
Логические операторы/: data.txt  logic_elements.cpp  logic_elemets.h  main.cpp  scheme.cpp  scheme.h  sheme.cpp  Логика.cpp
(+126 files in other folders)
