cmake_minimum_required(VERSION 3.27.6)
project(cpp_hw)

set(CMAKE_CXX_STANDARD 20)

# add_executable(1
#         "1/User.cpp"
#         "1/task_1.cpp"
#         "1/User.h"
#         "1/Group.cpp"
#         "1/Group.h"
#         "1/Observer.cpp"
#         "1/Observer.h")

# add_executable(2
#         "2/main.cpp")

# add_executable(4
#         "4/task_4.cpp"
#         "4/lcs.hpp"
#         "4/counter.hpp")

# add_executable(5
#         "5/task_5.cpp"
#         "5/Log.h")

add_executable(6
        "6/task_6.cpp"
)

# add_executable(7
#         "7/task_7.cpp"
# )

# add_executable(8
#         "8/task_8.cpp"
# )